# symProcSoc

./: .PROJECT.WLOG.INFO  .gitignore  README.md
Projects/OPI_TT/: CMakeLists.txt  Do_zrobienia_jeszcze_w_OPI.txt  Readme.md
Projects/OPI_TT/RAD/: opiTransfer.cbproj  opiTransfer.cbproj.local
Projects/OPI_TT/dane/: Kosice.txt  Kosice.xlsx
Projects/OPI_TT/doc/: INFORMACJA O PRAWIE DO UŻYTKOWANIA.docx  Lista oddawanych elementów.docx  Manual_0_KL i MJ 4XI final WB.docx  Manual_1.01a_old.docx  Manual_1.01b.docx  Manual_1.02.docx  Manual_aktualny KL.docx  ReadmeZrodla.docx  opiKlasyWersjaV18hpp.docx  opiTransfer_1.0a.docx  opiTransfer_1.0b.docx
Projects/OPI_TT/doc/KOPIEZAP/: Kopia zapasowa INFORMACJA O PRAWIE DO UŻYTKOWANIA.wbk  Kopia zapasowa Manual KL i MJ 4XI final.wbk  Kopia zapasowa ReadmieZrodla.wbk  Kopia zapasowa opiKlasyWersjaV18hpp.wbk
Projects/OPI_TT/doc/Ryc/: Ilustracja.pptx
Projects/OPI_TT/doc/mht/: Manual.mht  Manual_1.01b.mht  opiTransfer.mht
Projects/OPI_TT/doc/rtf/: opiKlasyWersjaV18hpp.rtf
Projects/OPI_TT/sps_opi/: spsGenProc.h  spsKonstrMap.cpp.alt  spsModel.h  spsParaLink.h  spsSwiatWizual.cpp
Projects/OPI_TT/sps_opi_2011/: Readme.md  spsElement.cpp  spsKonstrLst.cpp  spsMatNodeFiles.cpp  spsMatrixNode.cpp  spsParaLink.cpp  spsSwiatInit.cpp
Projects/OPI_TT/src/: opiGlobals.cpp  opiKlasyAdmNaukowej.cpp  opiKlasyGeneryczne.cpp  opiKlasyJednNaukowych.cpp  opiKlasyRynkowe.cpp  opiKlasySpoleczne.cpp  opiKlasyTransferu.cpp  opiKlasyWersja.cpp  opiKlasyWersja.hpp  opiKlasyZespolRoboczy.cpp  opiMain.cpp  opiNazwaPliku.cpp  opiStats.cpp
Projects/OPI_TT/src/res/: menuetc.rc.old  opiresource.h.2.old  resource.h.old  symshmsc.aps
Projects/OPI_TT/src_opi_2011/: opiGlobals.cpp  opiKlasyRynkowe.cpp  opiKlasyWersja.hpp  opiKlasyZespolRoboczy.cpp
Projects/OPI_TT/src_opi_2011/res/: menuetc.rc  menuetc.rc.2.old  opiTransfer.res  opiresource.h
src/: CMakeLists.txt  spsArcLink.cpp  spsArcLink.h  spsElement.cpp  spsElement.h  spsGenInfo.cpp  spsGenInfo.h  spsGenLink.cpp  spsGenLink.h  spsGenNode.cpp  spsGenNode.h  spsGenProc.cpp  spsGenProc.h  spsKonstrLst.cpp  spsMatNodeFiles.cpp  spsMatrixNode.cpp  spsMatrixNode.h  spsModel.h  spsParaLink.cpp  spsParaLink.h  spsSwiatBaza.cpp  spsSwiatInit.cpp  spsSwiatKrokSymul.cpp  spsSwiatProc.cpp  spsSwiatWizual.cpp
src_A/: spsArcLink.h  spsModel.h
src_A-B/: spsElement.cpp  spsGenInfo.h  spsGenNode.cpp  spsGenNode.h  spsGenProc.cpp  spsModel.h  spsSwiatBaza.cpp  spsSwiatProc.cpp  spsSwiatWizual.cpp
src_B/: spsElement.h  spsGenInfo.cpp  spsParaLink.cpp
src_B-A/: spsElement.h  spsGenInfo.cpp  spsGenLink.cpp  spsGenLink.h  spsGenNode.cpp  spsGenProc.cpp  spsGenProc.h  spsSwiatKrokSymul.cpp  spsSwiatWizual.cpp
src_old/src_A/: spsGenInfo.h  spsKonstrLst.cpp
src_old/src_A-B/: spsMatrixNode.h  spsSwiatInit.cpp
src_old/src_B/: spsGenNode.h  spsKonstrLst.cpp  spsMatrixNode.cpp  spsParaLink.h
